[gd_scene load_steps=16 format=3 uid="uid://cx8mc5hevswjg"]

[ext_resource type="Script" path="res://scripts/scoreboard.gd" id="1_e3ybm"]
[ext_resource type="Texture2D" uid="uid://66pot33mfidy" path="res://assets/background/menu.png" id="2_tcpqv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dox0w"]
expand_margin_top = 15.0
expand_margin_bottom = 15.0

[sub_resource type="Theme" id="Theme_ggqog"]
PanelContainer/styles/panel = SubResource("StyleBoxTexture_dox0w")

[sub_resource type="SystemFont" id="SystemFont_jwpju"]
font_names = PackedStringArray("Agency FB")
font_weight = 975
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_k4y7c"]
font = SubResource("SystemFont_jwpju")
font_size = 70
font_color = Color(0.909804, 0.505882, 0, 1)
outline_size = 10
outline_color = Color(0.164706, 0.164706, 0.164706, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mbhc3"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.733333, 0.560784, 0, 1)
border_width_bottom = 10
border_color = Color(0, 0.180392, 0.231373, 1)
border_blend = true
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_color = Color(0, 0.8, 0.564706, 1)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_08hjf"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.733333, 0.560784, 0, 1)
border_width_bottom = 10
border_color = Color(0, 0.180392, 0.231373, 1)
border_blend = true
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
corner_detail = 5

[sub_resource type="SystemFont" id="SystemFont_cqbu0"]
font_names = PackedStringArray("Centaur")
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_64oux"]
default_font = SubResource("SystemFont_cqbu0")
Button/font_sizes/font_size = 90
Button/styles/focus = SubResource("StyleBoxFlat_mbhc3")
Button/styles/hover = SubResource("StyleBoxFlat_mbhc3")
Button/styles/normal = SubResource("StyleBoxFlat_08hjf")

[sub_resource type="Theme" id="Theme_4ugxm"]
default_font = SubResource("SystemFont_cqbu0")
Button/font_sizes/font_size = 90
Button/styles/focus = SubResource("StyleBoxFlat_mbhc3")
Button/styles/hover = SubResource("StyleBoxFlat_mbhc3")
Button/styles/normal = SubResource("StyleBoxFlat_08hjf")

[sub_resource type="LabelSettings" id="LabelSettings_35yls"]
font_size = 50
font_color = Color(1, 1, 0, 1)
outline_size = 15
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_k53ee"]
font_size = 40
font_color = Color(0.721569, 0.258824, 0, 1)
outline_size = 25
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_f0rax"]
font_size = 40
font_color = Color(0.0156863, 0.0784314, 1, 1)
outline_size = 25
outline_color = Color(0, 0, 0, 1)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_qcn5r"]
properties/0/path = NodePath(".:Scoreboard_List")
properties/0/spawn = true
properties/0/replication_mode = 1

[node name="Scoreboard" type="Control" groups=["save_score"]]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_e3ybm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 6
visible = false

[node name="Background" type="TextureRect" parent="CanvasLayer"]
offset_right = 1280.0
offset_bottom = 800.0
texture = ExtResource("2_tcpqv")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -464.0
offset_top = 16.0
offset_right = 473.0
offset_bottom = 16.0
grow_horizontal = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
theme = SubResource("Theme_ggqog")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 220
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 220
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Bestenliste"
label_settings = SubResource("LabelSettings_k4y7c")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spieler" type="Label" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = SubResource("SystemFont_jwpju")
theme_override_font_sizes/font_size = 70
text = "Spieler:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="restart" type="Button" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
focus_neighbor_left = NodePath("../Reset")
focus_neighbor_right = NodePath("../Reset")
theme = SubResource("Theme_64oux")
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Neues Spiel"

[node name="Reset" type="Button" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2
focus_neighbor_left = NodePath("../restart")
focus_neighbor_right = NodePath("../restart")
theme = SubResource("Theme_4ugxm")
theme_override_colors/font_color = Color(1, 0.890196, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Reset"

[node name="Label_score" type="Label" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Score: "
label_settings = SubResource("LabelSettings_35yls")
horizontal_alignment = 1
vertical_alignment = 1

[node name="score" type="Label" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_font_sizes/font_size = 41
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 587)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer0" type="HBoxContainer" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Platz0" type="Label" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer0"]
layout_mode = 2
text = "Platz 1:"
label_settings = SubResource("LabelSettings_k53ee")

[node name="name0" type="Label" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer0"]
layout_mode = 2
label_settings = SubResource("LabelSettings_f0rax")

[node name="Score0" type="Label" parent="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer0"]
layout_mode = 2
theme_override_colors/font_color = Color(0.996844, 0.881704, 7.70092e-07, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 25
theme_override_font_sizes/font_size = 40

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_qcn5r")

[connection signal="pressed" from="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Reset" to="." method="_on_reset_pressed"]
